98-bookinfo-layered/03-istiopolicy-granular/02-mgw/01-deny-all.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-nothing
  namespace: ossm-bookinfo-middle
spec:
  {}
---
