98-bookinfo-layered/03-istiopolicy-granular/02-mgw/05-allow-reviews-from-productpage.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-reviews-from-productpage
  namespace: ossm-bookinfo-middle
spec:
  selector:
    matchLabels: 
      app: reviews
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/ossm-bookinfo-fe/sa/bookinfo-productpage"]
